syntax = "proto3";

package bruteforceprotector;

option go_package = "api;protectorpb";

message VerifyParams {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message VerifyRequest {
  VerifyParams verifyParams = 1;
}

message VerifyResponse {
  bool ok = 1;
}

message ResetLoginLimitRequest {
  string login = 1;
}

message ResetLoginLimitResponse {}

message ResetIPLimitRequest {
  string login = 1;
}
message ResetIPLimitResponse {}


enum AccessListType {
  BLACK = 0;
  WHITE = 1;
}

message AddAccessListRequest {
  string networkCIDR = 1;
  AccessListType listType = 2;
}

message AddAccessListResponse {
  bool result = 1;
  string error = 2;
}

message RemoveAccessListRequest {
  string networkCIDR = 1;
  AccessListType listType = 2;
}

message RemoveAccessListResponse {
  bool result = 1;
  string error = 2;
}

message GetAccessListItemsRequest {
  string networkCIDR = 1;
  AccessListType listType = 2;
}

message GetAccessListItemsResponse {
  repeated string items = 1;
}


service BruteforceProtectorService{
  rpc Verify(VerifyRequest) returns(VerifyResponse) {};
  rpc ResetLogin(ResetLoginLimitRequest) returns(ResetLoginLimitResponse) {};
  rpc ResetIP(ResetIPLimitRequest) returns(ResetIPLimitResponse) {};

  rpc AddAccessListItem(AddAccessListRequest) returns(AddAccessListResponse) {};
  rpc RemoveAccessListItem(RemoveAccessListRequest) returns(RemoveAccessListResponse) {};
  rpc GetAccessListItems(GetAccessListItemsRequest) returns(GetAccessListItemsResponse) {};
}
